--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,23 @@
       <artifactId>hadoop-common</artifactId>
       <version>3.1.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-common -->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-common</artifactId>
+      <version>2.0.5</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-client</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
   </dependencies>
+
 
   <build>
     <plugins>
